--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 		    <artifactId>modelmapper</artifactId>
 		    <version>2.3.0</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.mindrot</groupId>
+		    <artifactId>jbcrypt</artifactId>
+		    <version>0.4</version>
+		</dependency>
 
 	</dependencies>
 
