--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
+server.ssl.key-store=classpath:ttudecor.jks
+server.ssl.key-store-password=khuong
+server.ssl.key-store-type=jks
+server.ssl.key-alias=ttudecor
+
+server.port=443
+
+
