--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ttudecorshop
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=khuongtudeco
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
@@ -16,6 +16,7 @@ server.ssl.key-store-password=khuong
 server.ssl.key-store-type=jks
 server.ssl.key-alias=ttudecor
 
+server.tomcat.basedir=/ttudecor-app-data
 server.port=443
 
 
